[project]
name = "chumpy"
dynamic = ["version"]
description = "chumpy"
authors = [{ name = "Matthew Loper", email = "matt.loper@gmail.com" }]
dependencies = ["numpy>=1.8.1", "scipy>=0.13.0", "six>=1.11.0"]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Mathematics',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',

    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
]

[project.urls]
Homepage = "https://github.com/mattloper/chumpy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
